# Power

./: .gitmodules  CMakeLists.txt  README.md  run.lua  run.pl  test.cpp
.cache/clangd/index/: context.c.E08BAF2EFEF347F1.idx  egl_context.c.6FE5CD9469C78384.idx  glew.h.C07A02DDD98C1ED7.idx  glfw3.h.FDF7C1853D1A8EA4.idx  init.c.FCAB8B9358291B36.idx  input.c.A8875D1186A14657.idx  internal.h.DC677D1FA250A3EF.idx  main.cpp.9C589A54B12CB5E9.idx  mappings.h.4AD6D8C8A9CA180A.idx  monitor.c.3986F4A925F396CE.idx  null_init.c.0C152648774B36DF.idx  null_joystick.c.566B606219D025A4.idx  null_joystick.h.C2211A8B7F06144C.idx  null_monitor.c.27A887807212F327.idx  null_platform.h.F20BBA6A4F704F63.idx  null_window.c.CB9971614121488D.idx  osmesa_context.c.AAEE5D77F988E068.idx  platform.c.9637A9FAFFC40C23.idx  platform.h.F6C3C3562C8695DE.idx  test.cpp.8D09CE9FA5EE10D1.idx  test.h.942E223EC84D3D61.idx  vulkan.c.0480737F06D551F4.idx  wgl_context.c.6F4DD16A97445D58.idx  win32_init.c.CFBC356ADFEC39C3.idx  win32_joystick.c.7714F65DFF81C053.idx  win32_joystick.h.48130B11186B4D8E.idx  win32_module.c.3E321A2143EF8E25.idx  win32_monitor.c.7FC8AFD83D79121A.idx  win32_platform.h.68E5DB549A642BBD.idx  win32_thread.c.DAC56BE4001186A1.idx  win32_thread.h.64A02FD0EC2CA046.idx  win32_time.c.2DE5957508C3E480.idx  win32_time.h.AD184F3FA529CE54.idx  win32_window.c.71C7CFDE1D66191C.idx  window.c.81DB3BDE773BD452.idx
includes/: CMakeLists.txt  indexbuffer.h  renderer.h  shader.h  texture.h  vertexarray.h  vertexbuffer.h  vertexbufferlayout.h
power/: CMakeLists.txt  indexbuffer.cpp  main.cpp  renderer.cpp  shader.cpp  stb_image.cpp  texture.cpp  vertexarray.cpp  vertexbuffer.cpp
res/: CMakeLists.txt
res/shaders/: basic.shader
src/: CMakeLists.txt  test.cpp
